syntax = "proto3";

package annotate;

option java_package = "com.bazelgrpc.demo.annotate";
option java_outer_classname = "AnnotateServiceProto";

import 'proto/annotate/annotate.proto';

service AnnotateManagement {

  rpc getAnnotatePost(GetAnnotatePostRequest) returns (GetAnnotatePostResponse);
}

message GetAnnotatePostRequest {
    int32 annotate_id = 1;
}

message GetAnnotatePostResponse{
	repeated AnnotatePost annotate_posts = 1;
}